# bmstu_cg_course

./: README.md  sketches.docx
course/: Save_Tabs_17.11.2023_20-59-59.json
course/CourseWork/: CMakeLists.txt
course/CourseWork/config/: config_solution.cpp
course/CourseWork/data/: camera.txt  camera2.txt
course/CourseWork/director/: base_load_director.h
course/CourseWork/drawer/: base_drawer.h  qt_drawer.cpp  qt_drawer_factory.h
course/CourseWork/exceptions/: base_exceptions.h  loader_exceptions.h  manager_exceptions.h
course/CourseWork/transformer/: base_transformer_factory.h  matrix.cpp
course/CourseWork/visitor/: draw_visitor.cpp
course/prog/CourseWork/: CMakeLists.txt  MainWindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
course/prog/CourseWork/builder/: base_builder.h
course/prog/CourseWork/builder/camera/: base_camera_builder.h  camera_builder.cpp  camera_builder.h
course/prog/CourseWork/builder/model/: base_model_builder.h  model_builder.cpp  model_builder.h
course/prog/CourseWork/commands/: base_command.h
course/prog/CourseWork/commands/camera/: camera_commands.h
course/prog/CourseWork/commands/model/: model_commands.h
course/prog/CourseWork/commands/scene/: scene_commands.h
course/prog/CourseWork/config/: base_config.h  config.cpp  config.h  config_solution.h
course/prog/CourseWork/data/: model.txt  model2.txt
course/prog/CourseWork/director/: director_solution.cpp  director_solution.h
course/prog/CourseWork/director/camera/: camera_director.cpp  camera_director.h
course/prog/CourseWork/director/model/: model_director.cpp
course/prog/CourseWork/drawer/: AbstractDrawerFactory.h  BaseDrawer.h  QtDrawer.cpp  QtDrawer.h  QtDrawerFactory.cpp  QtDrawerFactory.h  abstract_drawer_factory.h  base_drawer.h  qt_drawer.cpp  qt_drawer.h  qt_drawer_factory.cpp  qt_drawer_factory.h
course/prog/CourseWork/exceptions/: builder_exceptions.h  config_exceptions.h  director_exceptions.h  gui_exceptions.h  manager_exceptions.h
course/prog/CourseWork/facade/: Facade.cpp  Facade.h  facade.cpp  facade.h
course/prog/CourseWork/loader/: base_loader.h  loader_solution.cpp  loader_solution.h
course/prog/CourseWork/loader/camera/: camera_loader.h  file_camera_loader.cpp
course/prog/CourseWork/loader/model/: file_model_loader.cpp  file_model_loader.h
course/prog/CourseWork/managers/: base_manager.h
course/prog/CourseWork/managers/draw/: draw_manager.cpp  draw_manager.h
course/prog/CourseWork/managers/load/: load_manager.cpp  load_manager.h
course/prog/CourseWork/managers/scene/: scene_manager.cpp  scene_manager.h
course/prog/CourseWork/managers/transform/: transform_manager.cpp  transform_manager.h
course/prog/CourseWork/objects/: object.h
course/prog/CourseWork/objects/camera/: base_camera.h  camera.cpp  camera.h  camera_structure.cpp  camera_structure.h
course/prog/CourseWork/objects/composite/: composite.cpp  composite.h
course/prog/CourseWork/objects/light/: Light.cpp  Light.h  LightStructure.cpp  LightStructure.h
course/prog/CourseWork/objects/model/: frame_model.cpp  frame_model.h  model_structure.cpp  model_structure.h
course/prog/CourseWork/objects/primitives/: edge.cpp  face.cpp  face.h  point.cpp  point.h
course/prog/CourseWork/scene/: scene.cpp  scene.h
course/prog/CourseWork/transformer/: base_transformer.h  matrix.h  transformer.cpp  transformer.h  transformer_factory.cpp  transformer_factory.h
course/prog/CourseWork/visitor/: draw_visitor.cpp  draw_visitor.h  transform_visitor.cpp  transform_visitor.h  visitor.h
course/prog/build-CourseWork-Desktop-Debug/: CMakeCache.txt.prev  CourseWork  Makefile  cmake_install.cmake
course/programm/: CMakeLists.txt  Makefile  additivemathelements.cpp  moc_objecthangman.cpp  objects.cpp  objects.hpp  proj.pro
course/src/: CMakeLists.txt  README.MD  mainwindow.ui  moc_illuminantplacechooser.cpp  moc_mainwindow.cpp  moc_sizechooser.cpp  proj.pro  specialgraphicsview.cpp  ui_movechooser.h  ui_objecthangman.h  usagefacade.hpp
course/src/config/: config.h  config.hpp
course/src/drawer/: Drawer.cpp  Drawer.h
course/src/facade/: UsageFacade.cpp  UsageFacade.h  usagefacade.cpp  usagefacade.hpp
course/src/graphics/: SpecialGraphicsView.cpp  SpecialGraphicsView.h
course/src/math/: additivemathelements.hpp
course/src/moc/: moc_movechooser.cpp  moc_objectchanger.cpp  moc_placechooser.cpp  moc_specialgraphicsview.cpp
course/src/readme/: README.MD
course/src/research/: NOSHADOW.csv  newShadow.csv  shadow.csv
course/src/ui/: mainwindow.cpp  mainwindow.ui  mainwindow.ui.autosave  objectchanger.cpp  placechooser.cpp
course/src/ui/header/: mainwindow.h  objectchanger.hpp  objecthangman.hpp  placechooser.h  ui_mainwindow.h  ui_placecarсhooser.h  ui_placetreechooser.h  ui_sizechooser.h
course/tex/: 01-definitions.aux  01-definitions.tex  02-abbreviations.aux  02-abbreviations.tex  03-introduction.aux  03-introduction.tex  04-analysis.aux  04-analysis.tex  05-design.aux  05-design.tex  06-implementation.aux  06-implementation.tex  07-research.aux  07-research.tex  08-conclusion.aux  08-conclusion.tex  09-appendix.aux  biblio.bib  coursework.aux  coursework.bbl  coursework.bcf  coursework.blg  coursework.run.xml  coursework.tex  coursework.toc  mylistsettings.sty
docs/: Makefile
docs/diogram/: Диаграмма без названия.drawio - draw.io.htm
docs/diogram/Диаграмма без названия.drawio - draw.io_files/: a.htm  api.js  main.css
docs/link/: links.txt  Аммерал Л. - Машинная графика на персональных компьютерах - 1992.djvu  Аммерал Л. - Программирование графики на Турбо Си - 1992.djvu
docs/tex_src/: 00-title.aux  01-contents.aux  02-intro.aux  02-intro.tex  10-analysis.aux  10-analysis.tex  20-design.aux  20-design.tex  30-impl.aux  40-research.aux  40-research.tex  50-conclusion.aux  51-biblio.aux  51-biblio.bib  preamble.inc.tex  report.aux  report.bbl  report.blg  report.dvi  report.tex  report.toc  tz.tex
docs/tmp/: .~lock.ТЗ_Вольняга_Максим_ИУ7-46Б.doc#  ТЗ_Вольняга_Максим_ИУ7-56.docx
docs/word_src/: .~lock.RPZ_title.doc#  RPZ_title.doc
(+429 files in other folders)
